# paradigmas_de_programacion

./: README.md  en_clase.txt  en_clase.txt~  pattern.hs  pattern.hs~  retoHaskell.hs  st0264paradigmasdeprogramacion_12_01.doc  suma.hi  suma.hs  test.pl  test_prolog.pl~  unificadores.txt  unificadores.txt~  universos_de_herbrand.txt
clases/: #linealidad_haskell.txt#  .#linealidad_haskell.txt  SLD.txt  clase10.pl  linealidad_haskell.txt  primer.pl  primer.pl~  principio_de_res_log.txt  punto-fijo.txt  reescritura.txt  reescritura.txt~  segundo.pl  segundo.pl~  test_det.pl
curry/: #linear.curry#  linear.curry  nat.curry  nat.curry~  nondet.curry  nondet.curry~  nondet.icurry  nums.curry
curry/.curry/: linear.fcy  linear.fint  nat.fcy  nat.fint  nondet.fcy  nondet.fint  nums.fcy  nums.fint  test.fcy  test.fint
curry/.curry/kics2/: Curry_nondet.hi  Curry_nondet.hs  Curry_nondet.info  Curry_nondet.nda
curry/.curry/pakcs/: linear.pl  nat.pl  nondet.pl  nums.pl  test.pl
curry/codigo/: firstprog  firstprog.curry  last.curry  last.curry~  lazy.curry  map.curry  naturales.curry  nondeterministic.curry  nondeterministic.curry~  out1  out2  outermost.curry  polydatatypes.curry  polydatatypes.curry~  scope.curry  scope.curry~  test.curry  test.curry~
curry/codigo/.curry/: firstprog.fcy  firstprog.fint  last.fcy  last.fint  lazy.fcy  lazy.fint  map.fcy  map.fint  naturales.fint  nondeterministic.fcy  nondeterministic.fint  outermost.fcy  outermost.fint  polydatatypes.fcy  scope.fcy  scope.fint  test.fcy  test.fint
curry/kics/: kics_src.tar
curry/kics/kics/: .gitignore  INSTALL  KiCS.cabal  Makefile  README  Setup.hs
curry/kics2-0.3.0/: Makefile
curry/kics2-0.3.0/currytools/: Makefile  README
curry/kics2-0.3.0/lib/: AllLibraries.curry  kics2-libraries.cabal
curry/kics2-0.3.0/runtime/: Basics.hi  ConstStore.hi  CurryException.hi  Debug.hi  ID.hi  ID.hi-boot  Installation.hi  Installation.hs  MonadList.hi  MonadSearch.hi  PrimTypes.hi  Search.hi  Solver.hi  Strategies.hi  Types.hi  kics2-runtime.cabal
curry/kics2-0.3.0/src/: CompileBoot.hi  REPLBoot.hi
curry/kics2/kics2-0.2.4/: Makefile
curry/kics2/kics2-0.2.4/frontend/curry-base/: curry-base.cabal
curry/kics2/kics2-0.2.4/frontend/curry-base/src/Curry/: AbstractCurry.hs
curry/kics2/kics2-0.2.4/frontend/curry-base/src/Curry/Base/: Ident.hs  LLParseComb.hs  LexComb.hs  Message.hs  Position.hs
curry/kics2/kics2-0.2.4/frontend/curry-base/src/Curry/ExtendedFlat/: MonadicGoodies.hs  TypeInference.hs
curry/kics2/kics2-0.2.4/frontend/curry-base/src/Curry/Files/: Filenames.hs
curry/kics2/kics2-0.2.4/frontend/curry-base/src/Curry/Syntax/: Type.hs
curry/kics2/kics2-0.2.4/runtime/: Basics.hi  ConstStore.hi  CurryException.hi  Debug.hi  ID.hi  ID.hi-boot  Installation.hi  Installation.hs  MonadList.hi  MonadSearch.hi  PrimTypes.hi  Search.hi  Solver.hi  Strategies.hi  Types.hi  kics2-runtime.cabal
curry/kics2/kics2-0.2.4/runtime/idsupplyghc/: IDSupply.hi
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/: curry-frontend.cabal
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/src/: Checks.hs  CurryDeps.hs  Imports.hs  Interfaces.hs  ModuleSummary.hs  Transformations.hs  cymake.hs
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/src/Base/: ScopeEnv.hs  Typing.lhs  Utils.lhs
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/src/Checks/: SyntaxCheck.lhs  WarnCheck.hs
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/src/Env/: Interface.hs  TypeConstructor.hs
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/src/Transformations/: CurryToIL.lhs  Simplify.lhs
curry/kics2_2/kics2-0.2.4/frontend/curry-frontend/test/: ExportError.curry  FunctionalPatterns.curry  List.curry  RecordTest.curry  RecordTest2.curry  SelfExport.curry  Set.curry  TyConsTest.curry  Typed.curry
curry/pakcs-1.11.2/: Makefile  pakcsinitrc
curry/pakcs-1.11.2/.curry/: test.fcy  test.fint
curry/pakcs-1.11.2/curry2prolog/: c2p.state  pakcs  pakcsversion.pl
curry/pakcs-1.11.2/docs/: markdown_syntax.html
curry/tutorial/: Tayrona_presentacion_final .pptx
ejercicios_haskell/: numDigs  numDigs.hi  numDigs.hs  numDigs.hs~
haskell2/: #task.hs#  .#task.hs  task.hs
lambda/: diapositiva.ana.tex~  diapositiva.tex~
lambda/ana/: diapositiva.ana.aux  diapositiva.ana.nav  diapositiva.ana.out  diapositiva.ana.toc  diapositiva.ana.vrb  diapositiva.aux
lambda/diapositiva/: _region_.tex  diapositiva.aux  diapositiva.dvi  diapositiva.nav  diapositiva.out  diapositiva.tex  diapositiva.tex~  diapositiva.toc
parser/: #parser_final.pl#  a  archivo  archivo2  b  file.in  file.in~  file.out~  file.pl  file.pl~  myfile.out  myout.out  parser.pl  parser_final.pl  parser_final.pl.txt  test
parser/ana/: IO.pl
taller_listas/: diez.pl  diez.pl~  nueve.pl
tarea1/: tarea1.dvi  tarea1.tex
tarea2/: tarea2.tex
tarea4/: suma.pl~  tarea4.pl  tarea4.pl~
tarea5/: 2.pl~  2.test.pl  2.test.pl~  tarea5-1.pl  tarea5-2.pl  tarea5-3.pl
tarea6/: derivation.pl  derivation.pl~  max_arbol.pl  max_arbol.pl~
test_emacs/: tarea1.dvi  tarea1.tex.backup  tarea1.tex~
trabajo inv/: #diapositiva.vrb#  diapositiva.aux  diapositiva.dvi  diapositiva.nav  diapositiva.out  diapositiva.tex  diapositiva.tex.backup.2  diapositiva.tex~  diapositiva.toc  diapositiva.vrb  diapositiva_resumen.aux  diapositiva_resumen.dvi  diapositiva_resumen.nav  diapositiva_resumen.out  diapositiva_resumen.tex  diapositiva_resumen.toc  diapositiva_resumen.vrb
trabajo inv/examples/: Curry_Main_Goal.curry  choose.curry  choose.hs  id_nil.curry  last.curry  leq.curry  member.curry  nats.curry  noinductive.curry  noinductive.hs  nondet.curry  or.curry  sublists.curry  take.curry  trs.curry
trabajo inv/examples/.curry/: Curry_Main_Goal.fcy  (+22 more)
zubieta/: kb2.pl  reto.pl  reto.pl~
(+2473 files in other folders)
